refactoring code with tsyringe
