# src/swagger.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "RentalX Documentation",
+        "title": "RentaX Documentation",
         "description": "This is an API Rent",
         "version": "1.0.0",
         "contact": {
@@ -76,6 +76,72 @@
                     }
                 }
             }
+        },
+        "/categories/import" :{
+           "post": {
+               "tags": [
+                   "Category"
+               ],
+               "summary": "Upload a new category",
+               "description" : "Upload a new category",
+               "requestBody": {
+                   "content":{
+                     "multipart/form-data": {
+                        "schema":{
+                            "type": "object",
+                            "properties": {
+                                "file": {
+                                    "type": "string",
+                                    "format": "binary"
+                                }
+                            }
+                        } 
+                     } 
+                   }
+               },
+               "response":{
+                   "201": {
+                       "description": "Created"
+                   }
+               }
+           } 
+        },
+        "/specifications": {
+            "post": {
+                "tags": ["Specifications"],
+                "summary": "Create a specification",
+                "description": "Create a new specification",
+                "requestBody": {
+                    "content": {
+                       "application/json":{
+                           "schema": {
+                             "$ref": "#/definitions/Specification"
+                           }
+                       } 
+                    }
+                },
+                "responses":{
+                    "201": {
+                        "description":"Created"
+                    },
+                    "500": {
+                        "description" : "Specification alread exists"
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "Specification":{
+          "type": "object",
+          "properties": {
+              "name": {
+                "type": "string"   
+              },
+              "description":{
+                  "type": "string"
+              }
+          }   
         }
     }
 }
